@@ -13,7 +13,7 @@ import net.minecraft.client.gui.GuiScreen;
 public class MenuRegistry
 {
 	public IMenu menu;
-	public List<IMenu> coded = new ArrayList();
+	public List<IMenu> registry = new ArrayList();
 	public List<IMenu> menus = new ArrayList();
 	public List<IMenu> user = new ArrayList();
 	public Minecraft mc = Minecraft.getMinecraft();
@@ -21,8 +21,8 @@ public class MenuRegistry
 	
 	public void register(IMenu menu)
 	{
-		this.coded.remove(menu);
-		this.coded.add(menu);
+		this.registry.remove(menu);
+		this.registry.add(menu);
 	}
 
 	public IMenu getMenu()
@@ -78,129 +78,125 @@ public class MenuRegistry
 
 	public boolean isBrowsable() 
 	{
-		return this.size() > 1;
+		return this.menus.size() > 1;
 	}
 	
 	//START WIP CODE________________________________
-	public int size()
-	{
-		int size = 0;
-		for(IMenu menu : this.menus)
-			if(menu.isEnabled())
-				size++;
-		return size;
-	}
-
+	
 	public void load()
 	{
 		this.menus.clear();
-		this.menus.addAll(this.coded);
-		this.loadUser();
-		this.menu = this.getFirst();
-	}
-
-	public void loadUser()
-	{
-		this.user.clear();
+		for(IMenu m : this.registry)
+		{
+			if(m.isEnabled())
+			{
+				this.menus.add(m);
+			}
+		}
+		this.menu = this.menus.get(0);
 	}
 	
 	/**
-	 * if the menu is disabled and on display it will set the display previous and if not available the next
+	 * if the menu is disabled and displaying will update the the nearest left menu if none is found the nearest right menu
+	 * if the menu is enabled and not on the menu list it will re-add them based on the configed index
 	 */
-	public void update()
+	public void update(IMenu menu)
 	{
-		if(this.isDisplaying() && !this.menu.isEnabled())
+		if(!menu.isEnabled())
 		{
-			IMenu index = this.getPrevious();
-			if(index == null)
-				index = this.getNext();
-			this.setMenu(index);
+			this.menus.remove(menu);
+			if(this.isDisplaying(menu))
+			{
+				IMenu index = this.getPrevious();
+				if(index == null)
+					index = this.getNext();
+				this.setMenu(index);
+			}
+		}
+		else if(!this.menus.contains(menu))
+		{
+			this.menus.add(this.getReAddedIndex(menu), menu);
 		}
 	}
 	
-	public boolean isDisplaying()
+	public int getReAddedIndex(IMenu index)
 	{
-		return this.menu != null &&  this.menu.get() == this.mc.currentScreen;
+		for(int i = this.registry.indexOf(index) - 1; i >= 0 ; i--)
+		{
+			IMenu m = this.menus.get(i);
+			if(m.isEnabled())
+				return i + 1;
+		}
+		return 0;
 	}
-	
-	public int getIndex() 
+
+	public boolean isDisplaying(IMenu menu)
 	{
-		return this.menus.indexOf(this.menu);
+		return menu.get() == this.mc.currentScreen;
 	}
 	
 	public void setMenu(IMenu nextMenu) 
 	{
-		if(!nextMenu.isEnabled())
-			throw new RuntimeException("cannot set index to a disabled IMenu:" + nextMenu.getId());
-		else if(!this.menus.contains(nextMenu))
-			throw new RuntimeException("an unregistred IMenu has been attempted to be set to the current menu:" + nextMenu.getId());
+		this.sanityCheck(nextMenu);
 		this.close(this.menu);
 		this.switchMenu(this.menu);
 		this.menu = nextMenu;
 		this.display();
 	}
 	
-	public void next()
+	public void sanityCheck(IMenu nextMenu)
 	{
-		IMenu index = this.getNext();
-		if(index == null)
-			index = this.getFirst();
-		this.setMenu(index);
+		if(!nextMenu.isEnabled())
+			throw new RuntimeException("cannot set index to a disabled IMenu:" + nextMenu.getId());
+		else if(!this.menus.contains(nextMenu))
+			throw new RuntimeException("an unregistred IMenu has been attempted to be set to the current menu:" + nextMenu.getId());
 	}
 	
 	public void previous()
 	{
-		IMenu index = this.getPrevious();
-		if(index == null)
-			index = this.getLast();
-		this.setMenu(index);
+		IMenu menu = this.getPrevious();
+		if(menu == null)
+			menu = this.getLast();
+		this.setMenu(menu);
+	}
+
+	public void next()
+	{
+		IMenu menu = this.getNext();
+		if(menu == null)
+			menu = this.getFirst();
+		this.setMenu(menu);
 	}
 	
+	public IMenu getPrevious()
+	{
+		int index = this.menus.indexOf(this.menu) - 1;
+		return index == -1 ? null : this.menus.get(index);
+	}
+	
+	public IMenu getNext()
+	{
+		int index = this.menus.indexOf(this.menu) + 1;
+		return index == this.menus.size() ? null : this.menus.get(index);
+	}
+
+	/**
+	 * stops all sounds and displays a fake gui menu so an IMenu will be displayed
+	 */
 	public void display()
 	{
 		Minecraft.getMinecraft().getSoundHandler().stopSounds();
 		Minecraft.getMinecraft().displayGuiScreen(GuiHandler.fake_menu);
 	}
-
-	public IMenu getPrevious() 
-	{
-		for(int i = this.getIndex() - 1; i >= 0 ; i--)
-		{
-			IMenu menu = this.menus.get(i);
-			if(menu.isEnabled())
-				return menu;
-		}
-		return null;
-	}
 	
-	public IMenu getNext() 
+	public IMenu getFirst() 
 	{
-		for(int i = this.getIndex() + 1; i < this.menus.size() ; i++)
-		{
-			IMenu menu = this.menus.get(i);
-			if(menu.isEnabled())
-				return menu;
-		}
-		return null;
+		return this.menus.get(0);
 	}
 	
 	public IMenu getLast() 
 	{
-		for(int i = this.menus.size() - 1; i >= 0; i--)
-		{
-			IMenu menu = this.menus.get(i);
-			if(menu.isEnabled())
-				return menu;
-		}
-		return null;
-	}
-
-	public IMenu getFirst()
-	{
-		for(IMenu m : this.menus)
-			if(m.isEnabled())
-				return m;
-		return null;
+		return this.menus.get(this.menus.size() - 1);
 	}
 	
 }
